Closed Bug 1319213 Opened 9 years ago Closed 9 years ago

Crash in ClientLayerManager::HandleMemoryPressure on GPU process restart

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Example crash: https://treeherder.mozilla.org/#/jobs?repo=try&author=danderson@mozilla.com&selectedJob=31501206 It looks like mWidget might be freed, and the ClientLayerManager has outlived the widget. Am running a try job to see if this is the case.
Attached patch bug1319213.patchSplinter Review
Looks like this was indeed the problem.
Attachment #8813081 - Flags: review?(matt.woodrow)
Attachment #8813081 - Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/25dbaa474141 Fix dangling nsIWidget pointer in ClientLayerManager. (bug 1319213, r=mattwoodrow)
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Hi :dvander, could you please nominate this uplift to Beta51 and Aurora52?
Flags: needinfo?(dvander)
Unless it is known otherwise, this only affects Nightly/53 where the GPU process is enabled.
Flags: needinfo?(dvander)
Comment on attachment 8813081 [details] [diff] [review] bug1319213.patch Approval Request Comment [Feature/regressing bug #]: Unknown [User impact if declined]: Rare crash when layers shuts down [Describe test coverage new/current, TreeHerder]: Nightly [Risks and why]: No risk [String/UUID change made/needed]: Oops, I just saw the other bug where we have crash stacks on 50/51. Sounds like we should uplift this.
Attachment #8813081 - Flags: approval-mozilla-beta?
Attachment #8813081 - Flags: approval-mozilla-aurora?
Comment on attachment 8813081 [details] [diff] [review] bug1319213.patch Fix a crash. Beta51+ and Aurora52+. Should be in 51 beta 4.
Attachment #8813081 - Flags: approval-mozilla-beta?
Attachment #8813081 - Flags: approval-mozilla-beta+
Attachment #8813081 - Flags: approval-mozilla-aurora?
Attachment #8813081 - Flags: approval-mozilla-aurora+
needs rebasing grafting 376500:25dbaa474141 "Fix dangling nsIWidget pointer in ClientLayerManager. (bug 1319213, r=mattwoodrow)" merging gfx/layers/client/ClientLayerManager.cpp warning: conflicts while merging gfx/layers/client/ClientLayerManager.cpp! (edit, then use 'hg resolve --mark') abort: unresolved conflicts, can't continue (use 'hg resolve' and 'hg graft --continue')
Flags: needinfo?(dvander)
Flags: needinfo?(dvander)
Wes or tomcat - can you try relanding this on aurora and beta now that the patch from bug 1305829 is also landing? Thanks!
Flags: needinfo?(wkocher)
Flags: needinfo?(cbook)
See Also: → 1324896
Flags: needinfo?(dvander)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: