Bug 1319213 - Fix dangling nsIWidget pointer in ClientLayerManager. r=mattwoodrow, a=gchang